--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asn1crypto==0.24.0
 attrs==17.4.0
 Automat==0.6.0
 backports.ssl-match-hostname==3.5.0.1
+boto3==1.6.7
+botocore==1.9.7
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
@@ -12,12 +14,15 @@ cssselect==1.0.3
 docker-py==1.10.6
 docker-pycreds==0.2.2
 docopt==0.6.2
+docutils==0.14
 enum34==1.1.6
+futures==3.2.0
 gitignore==0.0.8
 hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
 ipaddress==1.0.19
+jmespath==0.9.3
 lxml==4.1.1
 parsel==1.4.0
 pyasn1==0.4.2
@@ -26,10 +31,12 @@ pycparser==2.18
 PyDispatcher==2.0.5
 pymongo==3.6.1
 pyOpenSSL==17.5.0
+python-dateutil==2.7.0
 PyYAML==3.12
 queuelib==1.4.2
 requests==2.18.4
 retrying==1.3.3
+s3transfer==0.1.13
 scrapinghub==2.0.3
 Scrapy==1.5.0
 service-identity==17.0.0
