--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asn1crypto==0.24.0
 attrs==17.4.0
 Automat==0.6.0
 backports.ssl-match-hostname==3.5.0.1
+boto3==1.6.7
+botocore==1.8.11
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
@@ -21,7 +23,7 @@ idna==2.6
 incremental==17.5.0
 ipaddress==1.0.19
 jmespath==0.9.3
-lxml==4.1.1
+lxml==4.2.0
 parsel==1.4.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
